Fix spacing and layouting in scss

--- a/app/assets/stylesheets/bootstrap/overrides/theme.scss
+++ b/app/assets/stylesheets/bootstrap/overrides/theme.scss
@@ -56,41 +56,6 @@
   overflow: auto;
 }
 
-
-.m-a-0 { margin:        0 !important; }
-.m-t-0 { margin-top:    0 !important; }
-.m-r-0 { margin-right:  0 !important; }
-.m-b-0 { margin-bottom: 0 !important; }
-.m-l-0 { margin-left:   0 !important; }
-.m-x-0 { margin-right:  0 !important; margin-left:   0 !important; }
-.m-y-0 { margin-top:    0 !important; margin-bottom: 0 !important; }
-
-.m-a { margin: $line-height-computed !important; }
-.m-t { margin-top: $line-height-computed !important; }
-.m-b { margin-bottom: $line-height-computed !important; }
-.m-l { margin-left: $line-height-computed !important; }
-.m-r { margin-right: $line-height-computed !important; }
-.m-b { margin-bottom: $line-height-computed !important; }
-.m-x { margin-left: $line-height-computed !important; margin-right: $line-height-computed !important; }
-
-
-.p-a-0 { padding:        0 !important; }
-.p-t-0 { padding-top:    0 !important; }
-.p-r-0 { padding-right:  0 !important; }
-.p-b-0 { padding-bottom: 0 !important; }
-.p-l-0 { padding-left:   0 !important; }
-.p-x-0 { padding-right:  0 !important; padding-left:   0 !important; }
-.p-y-0 { padding-top:    0 !important; padding-bottom: 0 !important; }
-
-.p-a { padding: $line-height-computed !important; }
-.p-t { padding-top: $line-height-computed !important; }
-.p-b { padding-bottom: $line-height-computed !important; }
-.p-l { padding-left: $line-height-computed !important; }
-.p-r { padding-right: $line-height-computed !important; }
-.p-x { padding-left: $line-height-computed !important; padding-right: $line-height-computed !important; }
-
-
-
 @each $size in (9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 30, 40, 50, 60) {
   .f-#{$size} {
     font-size: #{$size}px;
